# EKF-syste

./: .gitignore  README.md  pyproject.toml  requirements.txt
.claude/: settings.json  settings.local.json
assets/samples/: README.txt
configs/: base.yaml  paths.yaml
configs/detector/: train.yaml  yolov8_onnx.yaml  yolov8n.yaml
configs/exp/: demo_cpu.yaml  demo_person_accuracy.yaml  demo_vehicle_accuracy.yaml  scenario_accelerated_motion.yaml  scenario_turning_motion.yaml  ua_detrac_main.yaml  (+3 more)
docs/: 01_background_and_significance.md  02_related_work.md  03_research_contents.md  04_thesis_outline.md  05_ekf_modeling.md  06_tracking_and_prediction.md  07_experiment_setup.md  08_result_analysis_template.md  09_dataset_preparation.md  10_baseline_vs_ekf.md
frontend/: .env  README.md  index.html  package-lock.json  package.json  tailwind.config.ts
scripts/: check_uadetrac_subset.py  compare_baseline_vs_ekf.py  convert_annotations.py  download_weights.py  evaluate.py  export_onnx.py  generate_adaptive_figures.py  generate_chapter5_detection_assets.py  generate_chapter5_tracking_prediction_assets.py  generate_demo_gt.py  run_adaptive_ablation.py  run_demo.py  run_experiments.py  run_tracking.py  run_webcam.py  smoke_test.py  validate_detector.py
tests/: test_adaptive_noise.py  test_association.py  test_baseline.py  test_convert_annotations.py  test_ctrv.py  test_detection_metrics.py  test_ekf.py  test_experiments.py  test_improvements.py  test_prediction_metrics.py  test_smoke_pipeline.py  test_track_manager.py  test_tracking_metrics.py
tmp_frames/: grid_b64.txt
(+77 files in other folders)
